fix: delete align-items property from main

--- a/style.css
+++ b/style.css
@@ -23,5 +23,4 @@ main {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
 }
